src/test/deca/syntax/valid/homemade/test/test_pars_val_instruction_and_expr_multiple.deca
// Description:
//    Programme minimaliste testant l'arbre d'instruction d'expression.
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2023


{
    instruction_bidon && instruction_bidon2 && instruction_bidon3 ;
}